fix nav bar styling on mobile

--- a/src/styles/navigation.scss
+++ b/src/styles/navigation.scss
@@ -56,7 +56,7 @@
       display: flex;
       text-align: center;
       align-items: center;
-      padding: 1rem 1rem 0 1rem;
+      padding: 0 1rem;
       margin: 0;
       font-weight: 400;
 
